# Foundation

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Foundation.sln  Foundation.vcxproj  Foundation.vcxproj.filters  LICENSE  LTC Upload  README.md  RenderDoc.cap  imgui.ini  vcpkg.json
Source/: CMakeLists.txt  Main.cpp  defines.hpp  pch.hpp
Source/Backend/AssetRegistry/: AssetRegistry.cpp  ImageImporter.cpp  ImageImporter.hpp  MeshImporter.hpp
Source/Backend/IO/: AssetManager.cpp  AssetManager.hpp  IO.hpp  Image.hpp  ImageImporter.cpp  MeshAsset.hpp  MeshImporter.hpp  Types.hpp
Source/Backend/RHI/: RHI.hpp  RenderGraph.cpp  RenderGraph.hpp
Source/Backend/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp  RenderGraphResource.hpp  RenderGraphResourceCache.cpp  RenderGraphResourceCache.hpp
Source/Backend/Renderer/: DeferredRenderer.cpp  DeferredRenderer.hpp  Renderer.hpp
Source/Backend/Scene/: SceneGraph.cpp  SceneGraph.hpp  SceneGraphView.hpp
Source/Backend/SceneGraph/: Component.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphView.hpp  SceneGraphViewStructs.h
Source/Common/: Allocator.hpp  CMakeLists.txt  Defines.hpp  FSM.hpp  Graph.hpp  Handle.hpp  Helpers.hpp  IO.hpp  Math.hpp  Task.hpp
Source/Editor/: CMakeLists.txt  Context.hpp  Editor.cpp  Editor.hpp  GlobalContext.cpp  GlobalContext.hpp  Globals.cpp  Globals.hpp  Main.cpp  ViewportWindow.hpp
Source/Editor/Input/: KBMCamera.cpp  KBMCamera.hpp
Source/Editor/Processor/: HDRIProbe.cpp  HDRIProbe.hpp  IBLProbeProcessor.cpp  IBLProbeProcessor.hpp  LTCFittedLUT.cpp  LTCFittedLUT.hpp  LTCTableProcessor.cpp  LTCTableProcessor.hpp  MeshPicking.cpp  MeshPicking.hpp  MeshSelectionProcessor.cpp  MeshSelectionProcessor.hpp  MeshSkinning.cpp  MeshSkinning.hpp  Processor.hpp  SkinnedMeshBufferProcessor.cpp  SkinnedMeshBufferProcessor.hpp  StaticMeshBufferProcessor.cpp  StaticMeshBufferProcessor.hpp
Source/Editor/Renderer/: Deferred.cpp  Deferred.hpp  Oneshot.cpp  Oneshot.hpp  RenderPass.hpp  Renderer.hpp
Source/Editor/Scene/: Component.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneImporter.cpp  SceneImporter.hpp  SceneView.cpp  SceneView.hpp
Source/Editor/Shaders/: AreaReduce.hlsl  Bindless.hlsli  Common.hlsli  DeferredLighting.hlsl  FFXSpd.hlsl  GBuffer.hlsl  HDRIProbe.hlsl  IBL.hlsli  IndirectLODCull.hlsl  InstanceCull.hlsl  LTC.hlsli  LightingCommon.hlsli  Math.hlsli  MeshSkinning.hlsl  Shaders.hpp  Shading.hlsli  ShadingPBR.hlsli  Shared.h  SilhouettePass.hlsl  SilhouettePassBlend.hlsl  Skybox.hlsl  SkyboxPass.hlsl  Tonemap.hlsl  Tonemapping.hlsl  Transparency.hlsl  TransparencyBlend.hlsl
Source/Editor/Widgets/: AssetMaterialComponentWidget.cpp  AssetMeshComponentWidget.cpp  AssetWidgets.hpp  EditorWidget.cpp  ImGuizmoWidget.cpp  LoadingScreenWidget.cpp  PrefilterProcessWidget.cpp  RendererWidget.cpp  SceneArmatureComponentWidget.cpp  SceneCameraComponentWidget.cpp  SceneGraphWidget.cpp  SceneGraphWidgets.hpp  SceneLightComponentWidget.cpp  SceneMeshComponentWidget.cpp  TransformWidget.cpp  ViewportWidget.cpp  ViewportWidgets.hpp  Widgets.hpp
Source/Editor/Win32/: Window.hpp
Source/Engine/AssetRegistry/: AssetRegistry.cpp  AssetRegistry.hpp  IO.hpp  MeshAsset.hpp  MeshImporter.hpp
Source/Engine/RHI/: RHI.hpp
Source/Engine/RenderGraph/: RenderGraphResourceCache.cpp
Source/Engine/SceneGraph/: SceneGraph.cpp  SceneGraph.hpp  SceneGraphView.hpp  SceneGraphViewStructs.h
Source/Frontend/: Main.cpp  ViewportWindow.hpp
Source/Frontend/Renderer/: Deferred.cpp  Deferred.hpp  Renderer.hpp
Source/IO/: IO.hpp  Image.cpp  Image.hpp  Mesh.hpp
Source/Renderer/: Common.hpp  Deferred.cpp  Deferred.hpp  Helpers.hpp  Renderer.hpp
Source/Renderer/Manager/: GeometryManager.cpp  GeometryManager.hpp  TextureManager.cpp  TextureManager.hpp
Source/Renderer/RHI/: Common.hpp  GeometryManager.cpp  GeometryManager.hpp  RHI.hpp  RHICommon.hpp  ResourceTypes.hpp  TextureManager.cpp  TextureManager.hpp
Source/Renderer/Renderer/: GeometryManager.cpp  GeometryManager.hpp  MaterialManager.cpp  MaterialManager.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  Structs.hpp
Source/Renderer/Scene/: Common.hpp  GeometryManager.cpp  GeometryManager.hpp  MaterialManager.cpp  MaterialManager.hpp  Scene.hpp
Source/Renderer/Shaders/: GBuffer.hlsl
Source/Runtime/: CMakeLists.txt
Source/Runtime/Asset/: Asset.hpp  AssetRegistry.hpp  MeshAsset.cpp  MeshAsset.hpp  MeshImporter.cpp  MeshImporter.hpp  ResourceContainer.hpp  TextureAsset.cpp  TextureAsset.hpp  TextureImporter.hpp  UploadContext.cpp  UploadContext.hpp
Source/Runtime/AssetRegistry/: Asset.hpp  AssetRegistry.cpp  AssetRegistry.hpp  IO.hpp  ImageAsset.cpp  ImageAsset.hpp  ImageImporter.hpp  MeshAsset.cpp  MeshAsset.hpp  MeshImporter.hpp  ResourceContainer.hpp  TextureAsset.cpp  TextureAsset.hpp  UploadContext.cpp  UploadContext.hpp
Source/Runtime/Engine/: Engine.hpp  GPUSkinCache.cpp  GPUSkinCache.hpp  HDRIProbeCache.hpp  MeshPicking.cpp  MeshPicking.hpp
Source/Runtime/RHI/: AssetUploadContext.cpp  AssetUploadContext.hpp  RHI.hpp  ResourceUploadContainer.hpp
Source/Runtime/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp  RenderGraphResource.hpp  RenderGraphResourceCache.cpp  RenderGraphResourceCache.hpp
Source/Runtime/Renderer/: Deferred.cpp  Deferred.hpp  GPUScene.cpp  GPUScene.hpp  Renderer.hpp
Source/Runtime/Scene/: Component.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneImporter.hpp  SceneView.hpp
Source/Shaders/: BRDF.hlsli  Bindless.hlsli  Common.hlsli  DepthSampleToTexture.hlsl  FFXSpd.hlsl  HDRIProbe.hlsl  IBL.hlsli  InstanceCull.hlsl  LTC.hlsli  ShadingNPR.hlsli  ShadingPBR.hlsli  SilhouettePassBlend.hlsl  Transparency.hlsl  TransparencyBlend.hlsl
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp  Logging.cpp  Logging.hpp  Math.hpp
src/Core/Bits/: Enums.hpp  (+2 more)
src/Editor/: CMakeLists.txt  Editor.cpp
src/Platform/: Application.cpp  Application.hpp  CMakeLists.txt  Window.hpp
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Triangle.cpp  Triangle.slang  VkApplication.cpp  VkApplication.hpp
(+277 files in other folders)
